--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -2,20 +2,50 @@
   <div class="col-12 text-center">
     <h2>All Tickets</h2>
   </div>
- </div>
+</div>
 
- <!-- <div class="row">
-  <div class="col-md-12 text-center" style="height: 120px;display: flex;justify-content: center;">
-    <form class="form mt-5">
-      <div class="custom-dropdown" style="position: relative; width: 600px;">
-        <input class="form-control" placeholder="Type to search..." name="searchInput" [(ngModel)]="searchInput" (input)="filterTickets()">
+
+
+<!-- <div class="row">
+  <div class="col-md-12 text-center" style="height: 120px; display: flex; justify-content: center;">
+    <div class="col-md-12">
+      <form class="form mt-5">
+        <input type="text" class="form-control" list="datalistOptions" id="exampleDataList"
+          placeholder="Type to search..." name="searchInput" [(ngModel)]="searchInput" (input)="filterTickets()">
+          <datalist id="datalistOptions" class="dropdown-options">
+          <option *ngFor="let ticket of ticketsArray; trackBy: trackByFn" class="option">{{ ticket.projectName }}</option>
+        </datalist>
+      </form>
+    </div>
+  </div>
+</div> -->
+
+<div class="row">
+  <div class="col-md-12 text-center">
+    <form class="form m-1">
+      <div
+        class="custom-dropdown"
+        style="position: relative; width: 400px"
+      >
+        <input
+          class="form-control icon"
+          placeholder="Type to search..."
+          name="searchInput"
+          [(ngModel)]="searchInput"
+          (input)="filterTickets()"
+        />
         <div class="dropdown-options" *ngIf="searchInput.length > 0">
-          <div *ngFor="let ticket of ticketsArray" class="option">{{ ticket.projectName }}</div>
+          <div *ngFor="let ticket of ticketsArray" class="option">
+            {{ ticket.projectName }}
+          </div>
         </div>
       </div>
     </form>
   </div>
-</div> -->
+</div>
+
+
+
 
 
 <div class="kanban" cdkDropListGroup>
